init MVC project

--- a/javaee7-spring-core-demo/src/main/resources/application.properties
+++ b/javaee7-spring-core-demo/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=javaee7-spring-core-demo
-catalog.name=General profile catalog
+catalog.name=Default Environment
+#logging.level.root=WARN
+logging.level.org.springframework.web=INFO
+logging.file.name=myapp.log
