--- a/javaee7-spring-mvc/pom.xml
+++ b/javaee7-spring-mvc/pom.xml
@@ -78,6 +78,14 @@
 		    <artifactId>modelmapper-module-record</artifactId>
 		    <version>1.0.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId> 
+	    </dependency>
 	</dependencies>
 
 	<build>
