--- a/javaee7-jpa-mvc/pom.xml
+++ b/javaee7-jpa-mvc/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
+		<version>3.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>javaee7-spring-core</groupId>
-	<artifactId>javaee7-spring-mvc</artifactId>
+	<groupId>com.turing.javaee7.jpa</groupId>
+	<artifactId>javaee7-jpa-mvc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>javaee7-spring-mvc</name>
+	<name>javaee7-jpa-mvc</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -30,14 +30,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-			<dependency>
-		    <groupId>nz.net.ultraq.thymeleaf</groupId>
-		    <artifactId>thymeleaf-layout-dialect</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -64,33 +57,18 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>bootstrap</artifactId>
-		    <version>5.3.2</version>
-		</dependency>
-		 <dependency>
-		    <groupId>org.modelmapper</groupId>
-		    <artifactId>modelmapper</artifactId>
-		    <version>2.4.4</version>
-		 </dependency>
-		 <dependency>
-		    <groupId>org.modelmapper</groupId>
-		    <artifactId>modelmapper-module-record</artifactId>
-		    <version>1.0.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-		<dependency> 
-			<groupId>org.springframework.boot</groupId> 
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
+		</dependency>
 		<dependency>
 		    <groupId>com.mysql</groupId>
 		    <artifactId>mysql-connector-j</artifactId> 
 	    </dependency>
+	    <dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>2.4.4</version>
+		 </dependency>
 	</dependencies>
 
 	<build>
