--- a/javaee7-jpa-mvc/pom.xml
+++ b/javaee7-jpa-mvc/pom.xml
@@ -69,6 +69,10 @@
 		    <artifactId>modelmapper</artifactId>
 		    <version>2.4.4</version>
 		 </dependency>
+		 <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-aop</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
