add Spring REST API

--- a/javaee7-jpa-mvc/src/main/resources/application.properties
+++ b/javaee7-jpa-mvc/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.password=Root@3421C
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
+#swagger api path 
+#springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.api-docs.path=/api-docs
 #spring.jpa.open-in-view=false
 
 # basic log level for all messages
@@ -19,3 +22,10 @@ logging.level.org.hibernate.SQL_SLOW=info
 logging.level.org.hibernate.cache=debug
 
 spring.datasource.hikari.maximumPoolSize=100
+
+#management.endpoint.health.group.custom.include=diskSpace,ping
+#management.endpoint.health.group.custom.show-components=always
+#management.endpoint.health.group.custom.show-details=always
+
+management.endpoints.web.exposure.include=*
+logging.file.name=myapp.log
