--- a/javaee7-jpa-mvc/pom.xml
+++ b/javaee7-jpa-mvc/pom.xml
@@ -48,6 +48,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -87,6 +91,11 @@
 		    <artifactId>querydsl-jpa</artifactId>
 		    <classifier>jakarta</classifier>
 		    <version>${querydsl.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springdoc</groupId>
+		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		    <version>2.8.5</version>
 		</dependency>
 	</dependencies>
 
