--- a/javaee7-jpa-mvc/src/main/resources/application.properties
+++ b/javaee7-jpa-mvc/src/main/resources/application.properties
@@ -29,5 +29,7 @@ spring.datasource.hikari.maximumPoolSize=100
 #management.endpoint.health.group.custom.show-components=always
 #management.endpoint.health.group.custom.show-details=always
 
+server.tomcat.threads.max=250
+
 management.endpoints.web.exposure.include=*
 logging.file.name=myapp.log
