add Reactive Service

--- a/javaee7-jpa-webflux-mongo/src/main/resources/application.properties
+++ b/javaee7-jpa-webflux-mongo/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=javaee7-jpa-webflux-mongo
+
+spring.data.mongodb.uri=mongodb://localhost:27017/javaee_7batch
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
